@@ -5,3 +5,4 @@ dist
 apidocs
 *,cover
 .testrepository
+docs/tutorial/index.html
